--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shadil311/shadil/blob/main/data_preprocessing.py\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shadil311/shadil/blob/main/data_preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -904,33 +904,16 @@
       "metadata": {
         "trusted": true,
         "_uuid": "2594e6f27a4b8a3fda17c7def917c1884546bae1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 180
-        },
-        "id": "bfclHnL2d1Yi",
-        "outputId": "79a346a8-b797-4ffe-cbf9-26d9566ceb30"
+        "id": "bfclHnL2d1Yi"
       },
       "cell_type": "code",
       "source": [
         "# Applying the OneHotEncoder to the first column[0]\n",
-        "onhotencoder = OneHotEncoder(categorical_features = [0])\n",
+        "onhotencoder = OneHotEncoder()\n",
         "X=onhotencoder.fit_transform(X).toarray()\n"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "OneHotEncoder.__init__() got an unexpected keyword argument 'categorical_features'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-0eaef8ed3b22>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Applying the OneHotEncoder to the first column[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0monhotencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mOneHotEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategorical_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0monhotencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: OneHotEncoder.__init__() got an unexpected keyword argument 'categorical_features'"
-          ]
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "metadata": {
@@ -967,12 +950,7 @@
       "metadata": {
         "trusted": true,
         "_uuid": "19b3d19ab1e4b1c1ff425d55b0eb79317bf7ab86",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 394
-        },
-        "id": "Ff3K3CCzd1Yk",
-        "outputId": "9e98316d-2612-4377-b2e6-5aaf0fad0588"
+        "id": "Ff3K3CCzd1Yk"
       },
       "cell_type": "code",
       "source": [
@@ -980,43 +958,24 @@
         "#       Step 5 : Splitting the dataset                        #\n",
         "###############################################################\n",
         "\n",
-        "from sklearn.cross_validation import train_test_split\n",
+        "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# The test size is taken as 20% of the total dataset i.e., out of 15 only 3 rows are taken as test set\n",
         "X_train,X_test,Y_train,Y_test = train_test_split(X,Y,test_size = 0.2,random_state = 0)"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'sklearn.cross_validation'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-c9393cfaedab>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m###############################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_validation\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# The test size is taken as 20% of the total dataset i.e., out of 15 only 3 rows are taken as test set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.cross_validation'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "execution_count": 17,
+      "outputs": []
     },
     {
       "metadata": {
         "trusted": true,
         "_uuid": "780861983da7a12d75a1a3c7e6e03a1602d41c07",
         "scrolled": true,
-        "id": "EsbO52Oid1Yk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EsbO52Oid1Yk",
+        "outputId": "f7c7dcbe-92af-425f-af97-09744dacb9c9"
       },
       "cell_type": "code",
       "source": [
@@ -1030,8 +989,23 @@
         "print ('Y_test: %s'%(str(Y_test.shape)))\n",
         "print ('----------------')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X_train: (12, 31)\n",
+            "----------------\n",
+            "X_test: (3, 31)\n",
+            "----------------\n",
+            "Y_train: (12,)\n",
+            "----------------\n",
+            "Y_test: (3,)\n",
+            "----------------\n"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -1072,34 +1046,167 @@
         "# We need to fit the test set\n",
         "X_test = sc_X.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "metadata": {
         "trusted": true,
         "_uuid": "19edd09629c93a036a69dbb5adc2fa526c1403db",
-        "id": "wwTbS6ZFd1Yn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wwTbS6ZFd1Yn",
+        "outputId": "248a0a8c-8998-43f1-a3df-125560ceca7f"
       },
       "cell_type": "code",
       "source": [
         "X_train"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134,  3.31662479,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134,  3.31662479,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027, -1.        ,  1.73205081, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "         2.23606798, -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134,  3.31662479,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [ 1.73205081, -1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        ,  3.31662479, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "         3.31662479],\n",
+              "       [ 1.73205081, -1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134,  3.31662479,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134,  3.31662479, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134,  3.31662479, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "         3.31662479, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027, -1.        ,  1.73205081,  3.31662479,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134,  3.31662479, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 ,  3.31662479, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134,  3.31662479,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [ 1.73205081, -1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134,  3.31662479,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "         2.23606798,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027, -1.        ,  1.73205081, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        ,  3.31662479, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134,  3.31662479, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134,  3.31662479, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        ,  3.31662479,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "         3.31662479, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "         2.23606798,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027,  1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "         2.23606798, -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        ,  3.31662479, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "metadata": {
         "trusted": true,
         "_uuid": "047b9e920be562717de782098c416e0bcc6e9bd5",
-        "id": "GrClFSJ3d1Yo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GrClFSJ3d1Yo",
+        "outputId": "8c2e338b-3472-4fb7-82ec-36c8671bda29"
       },
       "cell_type": "code",
       "source": [
         "X_test"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.57735027, -1.        ,  1.73205081, -0.30151134,  1.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  1.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [-0.57735027, -1.        ,  1.73205081, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  1.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         0.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  1.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  0.        , -0.30151134,\n",
+              "        -0.30151134],\n",
+              "       [ 1.73205081, -1.        , -0.57735027, -0.30151134,  0.        ,\n",
+              "        -0.30151134, -0.30151134,  0.        , -0.30151134, -0.30151134,\n",
+              "        -0.4472136 , -0.30151134, -0.30151134, -0.30151134, -0.30151134,\n",
+              "         1.        , -0.30151134, -0.30151134, -0.30151134,  0.        ,\n",
+              "        -0.4472136 ,  0.        , -0.30151134, -0.30151134, -0.30151134,\n",
+              "        -0.30151134, -0.30151134, -0.30151134,  1.        , -0.30151134,\n",
+              "        -0.30151134]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "metadata": {
